--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.13.2",
+    "lucide-react": "^0.474.0",
+    "next": "16.0.1",
+    "next-auth": "^4.24.13",
+    "notistack": "^3.0.2",
+    "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.1"
+    "react-router-dom": "^7.9.5",
+    "react-step-wizard": "^5.3.11"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1"
+    "eslint-config-next": "16.0.1",
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5"
   }
 }
