--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.13.2",
     "lucide-react": "^0.474.0",
-    "next": "16.0.1",
+    "next": "^16.1.0",
     "next-auth": "^4.24.13",
     "notistack": "^3.0.2",
     "postcss": "^8.5.6",
